[Enable differetn number of migration]